--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "githububi-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://brb-code.github.io/githububi-frontend/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
